<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/details_view"
    android:visibility="gone">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/btn_connect"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_peer_button" />
            <Button
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/btn_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_peer_button" />
            <Button
                android:layout_below="@+id/btn_disconnect"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="60dp"
                android:id="@+id/btn_face_happy"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:text="@string/btn_face_happy"
                android:visibility="invisible"/>
            <Button
                android:layout_below="@+id/btn_disconnect"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:id="@+id/btn_face_surprised"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:text="@string/btn_face_surprised"
                android:visibility="invisible"/>
            <Button
                android:layout_below="@+id/btn_disconnect"
                android:layout_alignParentRight="true"
                android:layout_marginTop="60dp"
                android:id="@+id/btn_face_angry"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:text="@string/btn_face_angry"
                android:visibility="invisible"/>
            <Button
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:id="@+id/btn_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop__button"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="320dp"
                android:layout_height="250dp"
                android:id="@+id/im_angry"
                android:src="@drawable/deedeeangry3"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="#ffed1c24"
                android:visibility="invisible"
                />
            <ImageView
                android:layout_width="320dp"
                android:layout_height="250dp"
                android:id="@+id/im_happy"
                android:src="@drawable/deedeehappy3"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="#ff22b14c"
                android:visibility="invisible"
                />
            <ImageView
                android:layout_width="320dp"
                android:layout_height="250dp"
                android:id="@+id/im_surprised"
                android:src="@drawable/deedeesurprised2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="#ffffc90e"
                android:visibility="invisible" />

        </RelativeLayout>
        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/status_bar"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_height="37dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_dark"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/status_text"
            android:visibility="invisible">
        </TextView>
    </LinearLayout>
</FrameLayout>
